--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,7 +1,7 @@
 .menu-btn {
   position: absolute;
   right: 35px;
-  top: 35px;
+  top: 25px;
   z-index: 3;
   cursor: pointer;
   @include ease-out;
@@ -21,7 +21,6 @@
         transform: rotate(45deg) translate(5px, 5px);
       }
       &:nth-child(2) {
-        // display: none;
         opacity: 0;
       }
       &:nth-child(3) {
@@ -34,3 +33,89 @@
 // .close {
 //   transform: rotate(180deg);
 // }
+
+.menu {
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  opacity: 0.9;
+  &.show {
+    // display: inline;
+    visibility: visible;
+  }
+
+  &-branding,
+  &-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+    float: left;
+  }
+  &-nav {
+    list-style: none;
+    background: darken($primary-color, 5);
+    margin: 0;
+    padding: 0;
+    transform: translate3d(0, -100%, 0);
+    @include ease-out;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  &-branding {
+    // background: darken($primary-color, 5);
+    background: $primary-color;
+    margin: 0;
+    padding: 0;
+    transform: translate3d(0, 100%, 0);
+    @include ease-out;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+    .portrait {
+      width: 250px;
+      height: 250px;
+      background: url("../img/portrait.jpg");
+      border-radius: 50%;
+      border: 3px solid $secondary-color;
+    }
+  }
+  .nav-item {
+    transform: translate3d(600px, 0, 0);
+    @include ease-out;
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+    &.current > a {
+      color: $secondary-color;
+    }
+  }
+  .nav-link {
+    display: inline-block;
+    position: relative;
+    padding: 1rem 0;
+    text-decoration: none;
+    color: #fff;
+    font-size: 30px;
+    font-weight: 400;
+    text-transform: uppercase;
+    @include ease-out;
+    &:hover {
+      color: $secondary-color;
+    }
+  }
+}
+
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.1s;
+  }
+}
