--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,16 @@
 @import "config";
 @import "menu";
+@import "mobile";
+
+body {
+  @include background;
+  background: $primary-color;
+  color: $white;
+  height: 100%;
+  margin: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.5;
+}
 
 h1,
 h2,
