--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -8,7 +8,7 @@
   .btn-line {
     width: 28px;
     height: 3px;
-    background: #fff;
+    background: set-text-color($primary-color);
     margin: 0 0 5px 0;
     // z-index: 4;
     @include ease-out;
@@ -103,7 +103,7 @@
     position: relative;
     padding: 1rem 0;
     text-decoration: none;
-    color: #fff;
+    color: set-text-color($primary-color);
     font-size: 30px;
     font-weight: 400;
     text-transform: uppercase;
