--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,11 +1,10 @@
 @import "config";
 @import "menu";
-@import "mobile";
 
 body {
   @include background;
   background: $primary-color;
-  color: $white;
+  color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -47,8 +46,9 @@ header {
 
 main {
   padding: 4rem;
-  height: 100%;
+  // height: 100%;
   //   margin-left: 2 rem;
+  min-height: calc(100vh - 60px);
   .icon {
     margin-top: 1rem;
     a {
@@ -66,3 +66,46 @@ main {
     }
   }
 }
+
+.about-info {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas:
+    "bioimage bio bio"
+    "job1 job2 job3";
+  grid-gap: 30px;
+  .bio-image {
+    grid-area: bioimage;
+    border-radius: 50%;
+    margin: auto;
+    border: $secondary-color 3px solid;
+  }
+  .bio {
+    grid-area: bio;
+  }
+  .job-1 {
+    grid-area: job1;
+  }
+  .job-2 {
+    grid-area: job2;
+  }
+  .job-3 {
+    grid-area: job3;
+  }
+
+  .job {
+    background: lighten($primary-color, 5);
+    padding: 0.5rem;
+    border-bottom: $secondary-color 5px solid;
+  }
+}
+
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: darken($primary-color, 10);
+  color: set-text-color($primary-color);
+  height: 60px;
+}
+
+@import "mobile";
