Work Page and Responsiveness

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -6,6 +6,10 @@
   // footer {
   //   height: 60px;
   // }
+  .projects {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 // Desktops & laptops
@@ -15,6 +19,10 @@
   }
   footer {
     height: 60px;
+  }
+  .projects {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -69,11 +77,19 @@
       margin-top: 1em;
     }
   }
+  .projects {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 // Smartphones
 @include media-sm {
   main#home h1 {
     margin-top: 10vh;
+  }
+  .projects {
+    display: grid;
+    grid-template-columns: 1fr;
   }
 }
