--- a/scss/main.scss
+++ b/scss/main.scss
@@ -100,6 +100,44 @@ main {
   }
 }
 
+//Work/Projects
+.projects {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0.7rem;
+  img {
+    width: 100%;
+    border: #fff solid 3px;
+    &:hover {
+      border-color: $secondary-color;
+      opacity: 0.5;
+      @include ease-out;
+    }
+  }
+}
+
+.btn {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem;
+  &:hover {
+    background: $secondary-color;
+    color: set-text-color($secondary-color);
+  }
+}
+
+.btn-light {
+  @extend .btn;
+  background: lighten($primary-color, 50);
+  color: #333;
+}
+
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, 50);
+  color: #fff;
+}
 #main-footer {
   text-align: center;
   padding: 1rem;
