--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,6 +22,7 @@ h3 {
       color: $secondary-color;
     }
   }
+
   &.sm-heading {
     margin-bottom: 2 rem;
     padding: 0.2 rem 1 rem;
@@ -116,6 +117,34 @@ main {
   }
 }
 
+//Contact Page
+.boxes {
+  display: flex;
+  // flex-flow: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+  div {
+    font-size: 2rem;
+    border: 3px #fff solid;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 3rem;
+    @include ease-out;
+    &:hover {
+      background: $secondary-color;
+      padding: 0.5rem 1.5rem;
+      color: set-text-color($secondary-color);
+      span {
+        color: set-text-color($secondary-color);
+      }
+    }
+  }
+}
+.text-secondary {
+  color: $secondary-color;
+}
+//project button styles
 .btn {
   display: block;
   padding: 0.5rem 1rem;
@@ -145,5 +174,9 @@ main {
   color: set-text-color($primary-color);
   height: 60px;
 }
+
+// .text-secondary {
+//   color: $secondary-color;
+// }
 
 @import "mobile";
